# DB_SpringsAgents

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  _e2e_suite.py  _e2e_test.py  _rt_hook.py  alembic.ini  docker-compose.yml  launcher.spec  pyproject.toml  requirements.txt  run.bat  test2_stderr.txt  test2_stdout.txt  test3_stderr.txt  test3_stdout.txt  test_body.json  test_stderr.txt  test_stdout.txt
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: deploy.yml
app/: main.py
app/agents/: agent1_requirements.py  agent2_design.py  agent3_materials.py  agent4_compliance.py  agent5_commercial.py  agent6_orchestrator.py
app/api/v1/: design.py  materials.py
app/core/: checkpointer.py  llm_factory.py  paths.py  settings.py
app/db/: chromadb_client.py  models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: .gitkeep  20260702_initial_schema.py  20260704_add_material_active_flag.py  20260704_phase6_autonomy_memory.py
app/db/repositories/: __init__.py  design_repository.py  material_repository.py
app/graph/: workflow.py
app/schemas/: design.py  material.py  state.py  structured_output.py
app/services/: __init__.py  design_history_service.py  design_service.py  export_service.py
app/standards/: embedder.py  ingestion.py  retrieval.py  store.py
app/tools/: commercial.py  compliance.py  geometry.py  materials.py  physics.py  spring_tools.py
data/standards/: astm_a125_excerpt.txt  din_2095_excerpt.txt
docs/: PRD.md  SDD.md  plan-mejora.md  plan.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentFlowPipeline.tsx  ClarificationDialog.tsx  ComplianceCard.tsx  DesignForm.tsx  DesignHistory.tsx  DesignResult.tsx  GeometryTable.tsx  MaterialOptions.tsx  ProposalsTable.tsx  ScoreChart.tsx  Spring3DViewer.tsx  SummaryHeader.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Spinner.tsx
frontend/src/services/: api-client.ts  design-service.ts  types.ts
scripts/: build_exe.py  ingest_standards.py  launcher.py  seed_materials.py
tests/: conftest.py  test_agents.py  test_api.py  test_conversation_flow.py  test_design_history.py  test_design_service.py  test_extraction_eval.py  test_materials_api.py  test_paths.py  test_repositories.py  test_seed_materials.py  test_spring_engines.py  test_standards_ingestion.py  test_standards_retrieval.py  test_tools.py  test_workflow.py
